<resources>
    <string name="app_name">人力资源管理</string>
    <string name="title_activity_login">用户登录</string>
    <string name="title_work">工作</string>
    <string name="title_contact">联系人</string>
    <string name="title_application">应用</string>
    <string name="alert_request_error">请求失败</string>
    <string name="alert_parse_json">JSON解析失败</string>
    <string name="alert_login_success">登录成功</string>
    <string name="zhidu_title">公司员工管理制度</string>
    <string name="zhidu">
        一、公司形象\n
        1、员工必须清楚地了解公司的经营范围和管理结构，并能向客户及外界正确地介绍公司情况。\n
        2、在接待公司内外人员的垂询、要求等任何场合，应注视对方，微笑应答，切不可冒犯对方。\n
        3、在任何场合应用语规范，语气温和，音量适中，严禁大声喧哗。\n
        4、遇有客人进入工作场地应礼貌劝阻，上班时间（包括午餐时间）办公室内应保证有人接待。\n
        5、接听电话应及时，一般铃响不应超过三声，如受话人不能接听，离之最近的职员应主动接听，重要电话作好接听记录，严禁占用公司电话时间太长。\n
        6、员工在接听电话、洽谈业务、发送电子邮件及招待来宾时，必须时刻注重公司形象，按照具体规定使用公司统一的名片、公司标识及落款。\n
        7、员工在工作时间内须保持良好的精神面貌。公司员工管理制度范本\n
        8、员工要注重个人仪态仪表，工作时间的着装及修饰须大方得体。\n
        二、生活作息\n
        1、员工应严格按照公司统一的工作作息时间规定上下班。\n
        2、作息时间规定\n
        1）夏季作息时间表（4月——9月）\n
        上班时间\n
        早9：00午休12：00——13：00\n</string>
    <string name="unread">未读</string>
    <string name="readed">已读</string>
    <string name="hint_address">如：北京，上海，广州（必填）</string>
    <string name="hint_days">请输入出差天数</string>
    <string name="hint_reason">请输入出差原由</string>
    <string name="select">请选择（必填）</string>
    <string name="hint_qingjiadays">请输入请假天数（必填）</string>
    <string name="hint_qingjiareason">请输入请假原由（必填）</string>
    <string name="hetong_zhaiyao">
        甲方（用人单位）： 乙方（职工）：\n
        一、合同期限\n
        （一）合同期限\n
        甲、乙双方同意按以下第 1 种方式确定本合同期限：\n
        1、有固定期限：从 年 月 日起至 年 月 日止。\n
        2、无固定期限：从 年 月 日起至法定的终止条件出现时止。\n
        （二）试用期限\n
        双方同意按以下第 2 种方式确定试用期期限（试用期包括在合同期内）：\n
        1、无试用期。\n
        2、试用期从 年 月 日起至 年 月 日止。\n
        二、工作内容和工作地点\n
        （一）乙方的工作内容:\n
        （二）甲方因生产经营需要调整乙方的工作内容，应协商一致，按变更本合同办理，双方签字或盖章确认的协议书或依法变更通知书作为本合同的附件。\n
        （三）乙方工作地点： 广州番禺天安节能科技园发展大厦919 。\n
        （四）除临时性工作或者短期学习培训外，如甲方需要乙方到本合同约定以外的地点或单位工作和学习培训，应按本合同第七条处理。\n
        三、工作时间和休息休假\n
        （一）甲、乙双方同意按以下第 1 种方式确定乙方的工作时间：\n
        1、标准工时制，即每日工作 8 小时，每周至少休息一天。\n
        2、不定时工作制，即经劳动行政部门审批，乙方所在岗位实行不定时工作制，每周至少休息一天。\n
        （二）甲方因生产（工作）需要，经与工会和乙方协商后可以延长工作时间。除《劳动法》第四十二条规定的情形外，一般每日不得超过一小时，因特殊原因最长每日不得超过三小时，每月不得超过三十六小时。\n
        （三）甲方执行法定的及企业依法自行补充的有关工作、休息、休假制度，按规定给予乙方享受节日假、年休假、婚假、丧假、产假、看护假等带薪假期，并按本合同约定的正常工作时间工资及有关政策法规规定的计算方法支付工资。\n
        四、劳动报酬\n
        （一）乙方正常工作时间的工资标准（计算加班工资基数），按下列第（ 1 ）种形式执行，并不得低于当地最低工资标准及本单位集体合同约定的标准。\n
        1、计时工资： 元／月；\n
        2、计件工资： （70％以上职工在正常工作时间内可以完成的，本项约定方为成立）；\n
        （二）乙方试用期工资为 元／月；\n
        （三）甲方依法安排乙方加班的，应按《劳动法》第四十四条的规定支付加班工资。\n
        （四）工资必须以法定货币支付，不得以实物或其他有价证券等形式替代货币支付。\n
        （五）甲方与乙方可以依法根据本单位的经营状况、物价指数情况，经过双方协商或者通过集体协商，确定工资正常增长的具体办法。\n
        （六）甲方给乙方发放工资的时间为：每月 15 日。如遇节假日或休息日，应提前到最近的工作日支付。\n
        五、社会保险\n
        （一）甲、乙双方按照国家和省、市有关规定，参加社会保险，缴纳社会保险费，乙方依法享受相应的社会保险待遇。\n
        （二）乙方患病或非因工负伤，甲方应按国家和地方的规定给予乙方医疗期和享受医疗待遇，并在规定的医疗期内支付病假工资或疾病救济费。\n
        （三）乙方患职业病、因工负伤或者因工死亡的，甲方应按国家和省市的工伤保险法律法规的规定办理。\n
        六、劳动保护、劳动条件和职业危害防护\n
        （一）甲方按国家和省、市有关劳动保护规定为乙方提供符合国家劳动卫生标准的劳动作业场所，切实保护乙方在生产工作中的安全和健康。如乙方工作过程中可能产生职业病危害，甲方应如实告知乙方，并应切实按《职业病防治法》的规定，保护乙方的健康及其相关权益。\n
        （二）甲方按国家有关规定，发给乙方必要的劳动保护用品，并按劳动保护规定每 （年／季／月）免费安排乙方进行体检。\n
        （三）甲方按国家和地方有关规定，做好女职工和未成年工的劳动保护工作。\n
        （四）如甲方违章指挥、强令冒险作业危及人身安全的，乙方有权拒绝，并可以随时解除本劳动合同。对甲方及其管理人员漠视乙方安全和健康的行为，乙方有权要求改正并向有关部门检举、控告。\n
        七、劳动合同的变更、解除、终止\n
        （一）符合《劳动合同法》规定的条件或者经甲、乙双方协商一致，可以变更劳动合同的相关内容或者解除固定期限合同、无固定期限合同和以完成一定工作为期限合同。\n
        （二）除因乙方不胜任工作，甲方可以依法适当调整其工作内容外，变更劳动合同，双方应当签订《变更劳动合同协议书》。\n
        （三）《劳动合同法》规定的终止条件出现，终止本劳动合同。\n
        八、经济补偿金、医疗补助费的发放\n
        解除或者终止本合同，经济补偿金、医疗补助费等发放按《劳动合同法》和国家、省、市有关规定执行。\n
        九、通知和送达\n
        甲乙双方在本合同履行过程中相互发出或者提供的所有通知、文件、文书、资料等，均可以当面交付或以本合同所列明的通讯地址履行送达义务。一方如果迁址或变更电话，应当及时书面通知另一方。\n
        十、因履行本合同发生纠纷的解决办法\n
        乙方认为甲方侵害自己合法权益的，可以先向甲方提出，或者向甲方工会反映，寻求解决。无法解决的，可以向就近的劳动行政部门投诉。属双方因履行本合同发生争议，应当先协商解决；协商不成的，可自争议发生之日起30日内向甲方劳动争议调解委员会申请调解，或者60日内向劳动争议仲裁委员会申请仲裁。\n
        十一、本合同的条款与国家、省、市的新颁布的法律、法规、规章不符的，按新的法律、法规、规章执行。\n
        十二、双方需要约定的其他事项
        本合同（含附件）一式两份（鉴证时需一式三份，其中鉴证机构留存一份），双方签字后，甲方必须将其中一份交给乙方持有，均具有同等法律效力。甲方不把其中一份交给乙方持有的，视为尚未与乙方签订本劳动合同；发生纠纷时，不得以已签订本合同为由对抗乙方的主张，并由甲方承担相应的法律责任。\n
</string>
    <string name="hint_word">请输入文字</string>
    <string name="name">姓名</string>
    <string name="date">日期</string>
    <string name="salary">薪资</string>
</resources>
